Run `yarn build` in CI and move a build package to `devDependencies`.

--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -15,4 +15,6 @@ jobs:
 
       - run: yarn install --ignore-optional --frozen-lockfile --non-interactive --check-files
 
+      - run: yarn build
+
       - run: yarn jest:ci
