WIP: attept at replacing our package json version fetch from graphql to a different package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "target": "es2015",
     "moduleResolution": "node",
+    "module": "commonjs",
     "esModuleInterop": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
-  }
+    "noUnusedParameters": true,
+  },
 }
