--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@actions/core": "^1.8.2",
     "@octokit/graphql": "^4.8.0",
+    "package-json": "^8.1.0",
     "semver": "^7.3.7"
   },
   "devDependencies": {
