--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -11,7 +11,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 12.x
+          node-version: 16 # This version is up to date with react master as of Sept 20, 2022.
 
       - run: yarn install --ignore-optional --frozen-lockfile --non-interactive --check-files
 
