--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
-  }
+    "noUnusedParameters": true,
+  },
 }
